--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,10 +1,36 @@
 @use "../styles/mixins.scss";
+@use "../styles/variables.scss";
 
-.countries__wrapper {
+.wrapper {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  place-items: center;
   width: 100%;
-  @include mixins.flexBox();
-  flex-wrap: wrap;
+  max-width: calc(300px * 5);
   gap: 50px;
   min-height: 100px;
-  transition: transform 0.3s ease-in-out;
+  padding: 20px;
+}
+
+.countries__wrapper {
+  min-height: calc(100svh - 200px);
+}
+
+.header {
+  width: 100%;
+  min-height: 60px;
+  background-color: variables.$white;
+  box-shadow: 0 2px 4px variables.$grey-50;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 15px;
+  box-shadow: 0 2px 10px rgb(217, 217, 217);
+}
+
+.header__button {
+  background-color: transparent;
+  border: none;
+  padding: 7px;
+  font-weight: 700;
 }
