--- a/frontend/src/app/filter-input/filter-input.component.html
+++ b/frontend/src/app/filter-input/filter-input.component.html
@@ -1,1 +1,10 @@
-<p>filter-input works!</p>
+<select
+  name="region"
+  id="region"
+  [(ngModel)]="selectedRegion"
+  (ngModelChange)="selectRegion($event)"
+>
+  <option *ngFor="let region of regions" [ngValue]="region.name">
+    {{ region.name }}
+  </option>
+</select>
