--- a/frontend/src/app/country-item/country-item.component.scss
+++ b/frontend/src/app/country-item/country-item.component.scss
@@ -27,10 +27,12 @@ $radius: 10px;
 
 .countries__item {
   background-color: variables.$white;
+  box-shadow: 0 0 10px rgb(217, 217, 217);
   margin-bottom: 20px;
   width: 300px;
   max-height: 400px;
   border-radius: $radius;
+  transition: transform 0.3s ease-in-out;
 
   &:hover {
     transform: scale(1.1);
