--- a/frontend/src/app/search-input/search-input.component.html
+++ b/frontend/src/app/search-input/search-input.component.html
@@ -2,5 +2,5 @@
   type="search"
   placeholder="Search for a country..."
   [(ngModel)]="letters"
-  (ngModelChange)="onChange($event)"
+  (ngModelChange)="onChange()"
 />
